templates/kubernetes/peer.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: peer0-org1

spec:
  replicas: 1

  selector:
    matchLabels:
      app: peer0-org1

  template:
    metadata:
      labels:
        app: peer0-org1

    spec:
      containers:

      - name: peer

        image: hyperledger/fabric-peer:latest

        ports:
        - containerPort: 7051
