templates/kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: fabric-service

spec:

  selector:
    app: peer0-org1

  ports:

  - protocol: TCP

    port: 7051

    targetPort: 7051

  type: ClusterIP
